<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ballA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/holo_blue_dark"
                    android:maxEms="2"
                    android:minEms="1"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/teamNameA"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_team_label"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/scoreA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxEms="2"
                android:minEms="1"
                android:text="@string/default_score_label"
                android:textSize="96sp" />
        </LinearLayout>

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:baselineAligned="false">

            <TextView
                android:id="@+id/setNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/black"
                android:gravity="center"
                android:text="@string/default_set_label"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TableRow
                android:id="@+id/set1"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/set1A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/set1B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/set2"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/set2A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/set2B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/set3"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/set3A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/set3B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/set4"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/set4A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/set4B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />
            </TableRow>

            <TableRow
                android:id="@+id/set5"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/set5A"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/set5B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxEms="2"
                    android:minEms="1"
                    android:text="@string/default_score_label"
                    android:textSize="16sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/teamNameB"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/default_team_label"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ballB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/holo_blue_dark"
                    android:maxEms="2"
                    android:minEms="1"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/scoreB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:maxEms="2"
                android:minEms="1"
                android:text="@string/default_score_label"
                android:textSize="96sp" />
        </LinearLayout>
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:stretchColumns="*">

        <TableRow>
            <Button
                android:id="@+id/player_A4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_4"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_A3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_3"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_A2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_2"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_4"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_3"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_2"
                android:text="@string/default_score_label" />
        </TableRow>

        <TableRow>
            <Button
                android:id="@+id/player_A5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_5"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_A6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_6"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_A1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_1"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_5"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_6"
                android:text="@string/default_score_label" />

            <Button
                android:id="@+id/player_B1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="add_1"
                android:text="@string/default_score_label" />
        </TableRow>
    </TableLayout>
</LinearLayout>